Fix vertical alignment for project content

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,13 @@ button:active {
   margin: 10rem 5rem;
 }
 
+#projects .projects-container-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 #projects img {
   width: 14rem;
 }
